fix background IN-1771, fix  reset standart visulisation input on IOS

--- a/spa/styl/search.styl
+++ b/spa/styl/search.styl
@@ -84,6 +84,8 @@
 
 .search-field
   padding 0 10px
+  -webkit-appearance none;
+  border-radius 0
 
 .search-date-block
   width 179px
